...
                                                            <nil key="textColor"/>
                                                            <nil key="highlightedColor"/>
                                                        </label>
                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wg5-bj-g4H">
                                                            <rect key="frame" x="179.5" y="0.0" width="179.5" height="30"/>
                                                            <fontDescription key="fontDescription" type="system" pointSize="1"/>
                                                            <state key="normal" title="Button" image="heartOff"/>
                                                            <connections>
                                                                <action selector="saveAndUnsave:" destination="RNf-xG-w7s" eventType="touchUpInside" id="wj4-a5-5Jj"/>
                                                            </connections>
                                                        </button>
                                                    </subviews>
                                                    <constraints>
...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="tGI-NB-0QG" id="zdH-Ad-ozE"/>
                            <outlet property="delegate" destination="tGI-NB-0QG" id="e1G-WP-fcR"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Results" id="Gcz-0O-2dE">
                        <barButtonItem key="rightBarButtonItem" title="Favorites" id="IC1-73-jyf">
                            <connections>
                                <segue destination="tLw-sb-NEo" kind="show" id="mmw-1L-TLk"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                </collectionViewController>
...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="tLw-sb-NEo" id="1R5-tS-V3r"/>
                            <outlet property="delegate" destination="tLw-sb-NEo" id="vAW-d1-q2B"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="Saved Properties" id="2Sn-j0-y62"/>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="d2g-Ph-2U7" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="812" y="-260"/>
        </scene>
    </scenes>
...
